06.Advanced-Policy-Management/demo-policy-generator/policy-generator-example/networkpolicies/netpol-application-2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stackrox-generated-webserver
  namespace: application-2
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: application-1
      podSelector:
        matchLabels:
          app: webserver
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: webserver
  policyTypes:
  - Ingress
