06.Advanced-Policy-Management/demo-policy-generator/policy-generator-example/networkpolicies/netpol-application-4.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stackrox-generated-webserver
  namespace: application-4
spec:
  podSelector:
    matchLabels:
      app: webserver
  policyTypes:
  - Ingress
